--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/subgrupos.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/subgrupos.html.twig
@@ -17,7 +17,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 <div class="content">
 		{% block upSection  %}
 			<div class = "upSection">
-			<h1 class ="sectionTitle">Grupos</h2>
+			<h1 class ="sectionTitle">Colectivos</h2>
 			</div>
 		{% endblock  %}
 
