--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
@@ -17,8 +17,8 @@ $( "#directores h3" ).css("opacity","0.4");
 <div class="content">
 		{% block upSection  %}
 			<div class = "upSection">
-			<h1 class ="sectionTitle">Grupos</h2>
-				<a href="{{ path('usuario_registrar_grupo') }}" class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Nuevo grupo</h4></a>
+			<h1 class ="sectionTitle">Cursos</h2>
+				<a href="{{ path('usuario_registrar_grupo') }}" class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Nuevo curso</h4></a>
 			</div>
 		{% endblock  %}
 
