--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantes_singrupo.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantes_singrupo.html.twig
@@ -6,9 +6,9 @@ App WEB  [Tutor]
 
 {% block js  %}
 <script>
-$( "#estudiantes" ).css("background-color","#000");
-$( "#estudiantes img" ).css("opacity","0.4");
-$( "#estudiantes h3" ).css("opacity","0.4");
+$( "#cursos" ).css("background-color","#000");
+$( "#cursos img" ).css("opacity","0.4");
+$( "#cursos h3" ).css("opacity","0.4");
 </script>
 {% endblock %}
 
@@ -17,7 +17,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 	<div class="content">
 		{% block upSection  %}
 		<div class = "upSection">
-			<h1 class ="sectionTitle">Estudiantes del {{ curso.nombre }}</h1>
+			<h1 class ="sectionTitle">Estudiantes sin grupo</h1>
 			<!--
 			<a href="" class="button">
 				<img src="/complementaria/web/img/reloj.png">
