--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantesubgrupo.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantesubgrupo.html.twig
@@ -17,7 +17,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 	<div class="content">
 		{% block upSection  %}
 		<div class = "upSection">
-			<h1 class ="sectionTitle">Estudiantes del {{ curso.nombre }}</h1>
+			<h1 class ="sectionTitle">Estudiantes del {{ subgrupo.nombre }}</h1>
 			<!--
 			<a href="" class="button">
 				<img src="/complementaria/web/img/reloj.png">
