--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/subgrupos.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/subgrupos.html.twig
@@ -60,7 +60,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 														</a>
 													</td>
 													<td style ="width: 90px;">
-														<a href="{{ path('ingenieria_profesor_actualizar_subgrupo', { 'id': grupo.id}) }}">
+														<a href="{{ path('ingenieria_profesor_actualizar_subgrupo', { 'id': subgrupo.id}) }}">
 														<img src="{{ asset('img/editar.png') }}">
 														<h3>Editar</h3>
 														</a>
