--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizargrupo.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizargrupo.html.twig
@@ -12,7 +12,7 @@ Aplicación WEB - [Administrador]
 <div class="content">
 	{% block upSection  %}
 	<div class="upSection">
-		<h1 class ="sectionTitle">Actualizar grupo</h1>
+		<h1 class ="sectionTitle">Actualizar curso</h1>
 		
 		<a href= "javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 	</div>
