--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantesubgrupo.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantesubgrupo.html.twig
@@ -19,7 +19,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 		<div class = "upSection">
 			<h1 class ="sectionTitle">Estudiantes del {{ subgrupo.nombre }}</h1>
 
-<a href="{{ path('ingenieria_profesor_estudiantes_singrupos' , { 'id': subgrupo.id}) }}"class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Estudiantes sin colectivos</h4></a>
+<a href="{{ path('ingenieria_profesor_estudiantes_singrupos' , { 'id': subgrupo.grupo.id }) }}"class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Estudiantes sin colectivos</h4></a>
 		</div>
 		{% endblock  %}
 
