--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantesubgrupo.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantesubgrupo.html.twig
@@ -6,9 +6,9 @@ App WEB  [Tutor]
 
 {% block js  %}
 <script>
-$( "#estudiantes" ).css("background-color","#000");
-$( "#estudiantes img" ).css("opacity","0.4");
-$( "#estudiantes h3" ).css("opacity","0.4");
+$( "#cursos" ).css("background-color","#000");
+$( "#cursos img" ).css("opacity","0.4");
+$( "#cursos h3" ).css("opacity","0.4");
 </script>
 {% endblock %}
 
@@ -18,8 +18,11 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 		{% block upSection  %}
 		<div class = "upSection">
 			<h1 class ="sectionTitle">Estudiantes del {{ subgrupo.nombre }}</h1>
-
+			
+			<a href="{{ path('ingenieria_ver_subgrupos', { 'id': subgrupo.grupo.id}) }}" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
+{% if subgrupo.estudiantes.count < 3 %}
 <a href="{{ path('ingenieria_profesor_estudiantes_singrupos' , { 'id': subgrupo.grupo.id }) }}"class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Estudiantes sin colectivos</h4></a>
+{% endif %}
 		</div>
 		{% endblock  %}
 
