fix menu flotante

--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/grupos.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/grupos.html.twig
@@ -47,11 +47,11 @@ $( "#cursos h3" ).css("opacity","0.4");
 																		
 											<td style ="width: 350px;">
 												<div>
-													<table class="opciones">
+													<table class="opciones" style="width:205px;">
 													<td style ="width: 60px;">
-														<a href="{{ path('ingenieria_ver_estudiantes_grupo', { 'id': grupo.id}) }}"><img src="{{ asset('img/editar.png') }}"><h3>Ver</h3></a>
+														<a href="{{ path('ingenieria_ver_estudiantes_grupo', { 'id': grupo.id}) }}"><img src="{{ asset('img/editar.png') }}"><h3> Ver </h3></a>
 													</td>
-													<td style ="width: 130px;">
+													<td style ="width: 120px;">
 														<a href="{{ path('ingenieria_ver_subgrupos', { 'id': grupo.id}) }}"><img src="{{ asset('img/editar.png') }}"><h3>Colectivos</h3></a>
 													</td>
 													</table> <!-- opciones -->
