--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizaractividad.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizaractividad.html.twig
@@ -86,6 +86,14 @@ $( "#actividades h3" ).css("opacity","0.4");
 					</div>
 
 					<div class="inputContainer" style="width:450px;">	
+						<h2>{{ form_label(formulario.horario) }}</h2>
+						<div class="input"> 
+							{{ form_widget(formulario.horario, {'attr': {'class':'mediano'}} ) }}
+							{{ form_errors(formulario.horario) }}
+						</div>
+					</div>
+
+					<div class="inputContainer" style="width:450px;">	
 						<h2>{{ form_label(formulario.url) }}</h2>
 						<div class="input"> 
 							{{ form_widget(formulario.url, {'attr': {'class':'mediano'}} ) }}
