add view colectivos en administrador

--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -12,7 +12,7 @@
 
 {% block sideBarMenu %}
 		<div id="menu">	
-			<a href="{{ path('usuario_adm_homepage') }}" class="menubutton"  id="directores">
+			<a href="{{ path('usuario_adm_homepage') }}" class="menubutton"  id="cursos">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
 				<h3>Cursos</h3>
 			</a>
