add button group new in administrador

--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
@@ -18,6 +18,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 		{% block upSection  %}
 			<div class = "upSection">
 			<h1 class ="sectionTitle">Cursos</h2>
+			<a href="{{ path('usuario_registrar_grupo') }}" class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Nuevo curso</h4></a>
 			</div>
 		{% endblock  %}
 
