fix css width input text and forms

--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/asignarsubgrupoestudiantes.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/asignarsubgrupoestudiantes.html.twig
@@ -31,7 +31,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 			<div>{{ form_errors(formulario) }}</div>	
 
 			<div class="profileFormContainer">
-				<div class="inputContainer">		
+				<div class="inputContainer"  style="width:600px;">		
 				<h2>{{ form_label(formulario.nombres) }}</h2>
 				<div class="input">
 				{{ form_widget(formulario.nombres, {'attr': {'class':'mediano'}} ) }}
@@ -39,7 +39,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 				</div>
 			</div>
 			
-				<div class="inputContainer">		
+				<div class="inputContainer"  style="width:600px;">		
 				<h2>{{ form_label(formulario.apellidos) }}</h2>
 				<div class="input">
 				{{ form_widget(formulario.apellidos, {'attr': {'class':'mediano'}} ) }}
@@ -47,7 +47,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 				</div>
 			</div>
 
-			<div class="inputContainer">	
+			<div class="inputContainer"  style="width:600px;">	
 				<h2>{{ form_label(formulario.ci) }}</h2>
 				<div class="input"> 
 				{{ form_widget(formulario.ci, {'attr': {'class':'corto'}} ) }}
@@ -55,7 +55,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 				</div>
 			</div>
 
-				<div class="inputContainer">		
+				<div class="inputContainer"  style="width:600px;">		
 				<h2>{{ form_label(formulario.codigo) }}</h2>
 				<div class="input">
 				{{ form_widget(formulario.codigo, {'attr': {'class':'corto'}} ) }}
@@ -63,7 +63,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 				</div>
 			</div>
 
-			<div class="inputContainer">		
+			<div class="inputContainer"  style="width:600px;">		
 				<h2>{{ form_label(formulario.email) }}</h2>
 				<div class="input">
 				{{ form_widget(formulario.email, {'attr': {'class':'mediano'}} ) }}
@@ -71,7 +71,7 @@ $( "#cursos h3" ).css("opacity","0.4");
 				</div>
 			</div>
 			
-			<div class="inputContainer">		
+			<div class="inputContainer"  style="width:600px;">		
 				<h2>{{ form_label(formulario.subgrupo) }}</h2>
 				<div class="input">
 				{{ form_widget(formulario.subgrupo, {'attr': {'class':'mediano'}} ) }}
