--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrarprofesor.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/registrarprofesor.html.twig
@@ -12,7 +12,7 @@ Aplicación WEB - [Administrador]
 <div class="content">
 	{% block upSection  %}
 	<div class="upSection">
-		<h1 class ="sectionTitle">Nuevo profesor</h1>
+		<h1 class ="sectionTitle">Nuevo tutor</h1>
 		
 		<a href= "javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 	</div>
@@ -27,7 +27,7 @@ Aplicación WEB - [Administrador]
 
 					
 
-					<div class="inputContainer">
+					<div class="inputContainer" style="width:600px;">
 						<h2>{{ form_label(formulario.nombres) }}</h2>
 						<div class="input"> 
 							{{ form_errors(formulario.nombres) }}
@@ -35,7 +35,7 @@ Aplicación WEB - [Administrador]
 						</div>
 					</div>
 
-					<div class="inputContainer">
+					<div class="inputContainer" style="width:600px;">
 						<h2>{{ form_label(formulario.apellidos) }}</h2>
 						<div class="input"> 
 							{{ form_errors(formulario.apellidos) }}
@@ -43,7 +43,7 @@ Aplicación WEB - [Administrador]
 						</div>
 					</div>
 
-					<div class="inputContainer">
+					<div class="inputContainer" style="width:600px;">
 						<h2>{{ form_label(formulario.ci) }}</h2>
 						<div class="input"> 
 							{{ form_errors(formulario.ci) }}
@@ -51,7 +51,7 @@ Aplicación WEB - [Administrador]
 						</div>
 					</div>
 					
-					<div class="inputContainer">
+					<div class="inputContainer" style="width:600px;">
 						<h2>{{ form_label(formulario.email) }}</h2>
 						<div class="input"> 
 							{{ form_errors(formulario.email) }}
@@ -59,7 +59,7 @@ Aplicación WEB - [Administrador]
 						</div>
 					</div>
 
-					<div class="inputContainer">
+					<div class="inputContainer" style="width:600px;">
 						<h2>{{ form_label(formulario.emailInstitucional) }}</h2>
 						<div class="input"> 
 							{{ form_errors(formulario.emailInstitucional) }}
