--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizaractividad.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/actualizaractividad.html.twig
@@ -116,7 +116,10 @@ $( "#actividades h3" ).css("opacity","0.4");
 							{{ form_errors(formulario.numeroCupos) }}
 						</div>
 					</div>
-
+					<div class="inputContainer" style="width:450px;">	
+						<h2 style="width:450px;">Contribución al desarrollo de competencias:</h2>
+					</div>
+					
 					<div class="inputContainer">	
 						<h2>{{ form_label(formulario.trabajo) }}</h2>
 						<div class="input">
@@ -124,7 +127,6 @@ $( "#actividades h3" ).css("opacity","0.4");
 							{{ form_errors(formulario.trabajo) }}
 						</div>
 					</div>
-
 					<div class="inputContainer">	
 						<h2>{{ form_label(formulario.aprendizaje) }}</h2>
 						<div class="input">
@@ -132,7 +134,6 @@ $( "#actividades h3" ).css("opacity","0.4");
 							{{ form_errors(formulario.aprendizaje) }}
 						</div>
 					</div>
-
 					<div class="inputContainer">	
 						<h2>{{ form_label(formulario.pensamiento) }}</h2>
 						<div class="input">
@@ -141,6 +142,9 @@ $( "#actividades h3" ).css("opacity","0.4");
 						</div>
 					</div>
 
+					<div class="inputContainer" style="width:450px;">	
+						<h2 style="width:450px;">Contribución al pensamiento de principios axiológicos:</h2>
+					</div>
 
 					<div class="inputContainer">	
 						<h2>{{ form_label(formulario.autonomia) }}</h2>
