--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/registrar_actividad_semanal.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/registrar_actividad_semanal.html.twig
@@ -53,7 +53,7 @@ App WEB  [Estudiante]
 						</div>
 					</div>
 					
-				<div class="inputContainer">
+				<div class="inputContainer" style="width:800px;">
 					<h2>{{ form_label(formulario.fechaInicio) }}</h2>
 					<div class="input"> 
 					{{ form_widget(formulario.fechaInicio, {'attr': {'class':'corto'}} ) }}
@@ -61,7 +61,7 @@ App WEB  [Estudiante]
 					</div>
 				</div>
 				
-				<div class="inputContainer">
+				<div class="inputContainer" style="width:800px;">
 					<h2>{{ form_label(formulario.fechaFin) }}</h2>
 					<div class="input"> 
 					{{ form_widget(formulario.fechaFin, {'attr': {'class':'corto'}} ) }}
