--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/subirestudiantes.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/subirestudiantes.html.twig
@@ -16,7 +16,7 @@
 		{% block upSection  %}
 			<div class = "upSection">
 				<h1 class="sectionTitle">Archivo CSV - Estudiantes registrados en el sistema</h1>
-				<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
+				<!-- <a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a> -->
 			</div>
 		{% endblock  %}
 
