--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades_ofertadas.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades_ofertadas.html.twig
@@ -22,7 +22,7 @@
 	{% block upSection  %}
 	<div class = "upSection">
 		<h1 class="sectionTitle">Actividad complementaria</h1>
-		<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
+		<a href="{{ path('ingenieria_estudiante_actividades') }}"  class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 		
 	</div>
 	{% endblock  %}
