--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades_ofertadas.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades_ofertadas.html.twig
@@ -23,7 +23,7 @@
 	<div class = "upSection">
 		<h1 class="sectionTitle">Actividad complementaria</h1>
 		<a href="{{ path('ingenieria_estudiante_actividades') }}"  class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
-		
+		<a href="{{ path('ingenieria_estudiante_inscripcion' , { 'id': actividad.id }) }}" class = "button"><img src="{{ asset('img/guardar.png') }}"/><h4>Cursar actividad</h4></a>
 	</div>
 	{% endblock  %}
 
@@ -83,10 +83,11 @@
 					{{ actividad.url }}
 					</div>
 				</div>
-				
+				<!--
 				<div class= "inputContainer" style = "position= absolute; padding: 30px 10px 10px 10px;">
 					<a href="{{ path('ingenieria_estudiante_inscripcion' , { 'id': actividad.id }) }}" class = "button"><h4>Cursar actividad</h4></a>
 				</div>
+				-->
 				
 			</form>
 			
