--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/subgrupos.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/subgrupos.html.twig
@@ -82,6 +82,12 @@ $( "#cursos h3" ).css("opacity","0.4");
 														<h3>Eliminar</h3>
 														</a>
 													</td>
+													<td style ="width: 110px;">
+														<a href="{{ path('ingenieria_profesor_bitacora', { 'id': subgrupo.id}) }}">
+														<img src="{{ asset('img/editar.png') }}">
+														<h3>Bitácora</h3>
+														</a>
+													</td>
 													</table> <!-- opciones -->
 												</div>	
 											</td>
