--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/bitacora.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/bitacora.html.twig
@@ -5,11 +5,7 @@ Aplicación WEB  [Administrador]
 {% endblock %}
 
 {% block js  %}
-<script>
-	$( "#estudiantes" ).css("background-color","#000");
-	$( "#estudiantes img" ).css("opacity","0.4");
-	$( "#estudiantes h3" ).css("opacity","0.4");
-</script>
+
 {% endblock %}
 
 {% block content  %}
@@ -19,8 +15,8 @@ Aplicación WEB  [Administrador]
 	{% block upSection  %}
 	<div class = "upSection" style="height:60px;">
 		<h1 class ="sectionTitle">Bitácora de trabajo semanal</h1>
-		<h2 style="color: black !important; position: absolute; right:3%; font-weight:bold">{{ estudiante.nombres }} {{ estudiante.apellidos }}</h2>
-		<h2 style="color: black !important;  position: absolute; right:3%; top:45px;">{{ estudiante.email }} {{ estudiante.emailInstitucional }}</h2>
+		<h2 style="color: black !important; position: absolute; right:3%; font-weight:bold">Lider:{{ estudiante.nombres }} {{ estudiante.apellidos }}</h2>
+		<h3 style="color: black !important;  position: absolute; right:3%; top:45px;">{{ estudiante.email }} {{ estudiante.emailInstitucional }}</h3>
 		<!--
 			<a href="{{ path('ingenieria_estudiante_registrar_actvidad_semanal' , { 'codigo': estudiante.codigo}) }}" class = "button"> <img src="{{ asset('img/anadirActividad.png') }}"/>
 			<h4>Actividad</h4>
@@ -42,7 +38,9 @@ Aplicación WEB  [Administrador]
 			<tr style="height:8px;"></tr>
 			{% for a in bitacora %}
 			<tr>
-				<td  class = "colActividad">{{ a.nombreActividad }}</td>
+				<td  class = "colActividad">
+				<a href = "{{ path('usuario_ver_bitacora', { 'id': a.id}) }}">{{ a.nombreActividad }}</a>
+				</td>
 				<td  class = "colFecha">{{ a.fechaInicio|date("d/m/Y") }}</td>
 				<td  class = "colFecha">{{ a.fechaFin|date("d/m/Y") }}</td>
 				{% if a.finalizada == false%}
