--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/estudiantes.html.twig
@@ -17,7 +17,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 <div class="content">
 		{% block upSection  %}
 			<div class = "upSection">
-			<h1 class ="sectionTitle">Estudiantes</h2>
+			<h1 class ="sectionTitle">Estudiantes del {{ grupo.nombre }}</h2>
 			<!--
 			<a id="anadirEstudiantes" class = "button"><img src="{{ asset('img/anadirPracticantes.png') }}"/><h4>Subir estudiantes</h4></a>
 			<a id="nuevoEstudiante" href="{{ path('usuario_registrar_estudiante') }}" class = "button"><img src="{{ asset('img/academicosBoton.png') }}"/><h4>Nuevo estudiante</h4></a>
@@ -62,6 +62,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 										<td>{{ estudiante.ci }}</td>
 										<td>{{ estudiante.emailInstitucional }} <br> {{ estudiante.email }}</td>
 										<td>
+											<!--
 											<div>
 												<table class="opciones">
 													{% if estudiante.actividad == null > 0 %}
@@ -69,8 +70,8 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 													{% else %}
 													<td style="width: 120px;"><a href="{{ path('usuario_bitacora', { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" /><h3>Bitacora</h3></a></td>
 													{% endif %}
-												</table> <!-- opciones -->
-											</div>
+												</table>
+											</div> -->
 											{% if estudiante.subgrupo != NULL %}
 											<td style="width: 220px;">{{ estudiante.subgrupo.nombre }}</td>
 											{% else %}
