add view face meeting

--- a/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
@@ -25,6 +25,11 @@
 		<h3>Bitácora semanal</h3>
 	</a>
 	
+	<a href="{{ path('ingenieria_estudiante_encuentros') }}" class="menubutton"  id="encuentros">
+		<img id="cronogramaIcon" src="{{ asset('img/cronograma.png') }}">
+		<h3>Encuentros presenciales</h3>
+	</a>
+	
 	<a href="{{ path('ingenieria_estudiante_actividadmatriculada') }}" class="menubutton"  id="actividad">
 		<img id="externoIcon" src="{{ asset('img/actividad.png') }}">
 		<h3>Actividad complementaria</h3>
